--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-TabGroupie is a plugin for pentactyl. It allows you to create tabgroups,
+TabGroupie is a plugin for pentadactyl. It allows you to create tabgroups,
 rename them and move the currently use tab from group to group
 with pentadactyl.
 
