deleting empty groups

--- a/README
+++ b/README
@@ -4,12 +4,14 @@ with pentadactyl.
 
 under constuction:
 I'm not yet done. There are still very hard bugs in the code.
-Plase be careful. It is very probaly your browser will crash,
+Plase be careful. It is very probable, that your browser will crash,
 but I promise: I'm about to fix these problems.
 
+requires:
+Firefox 4.0* (or similar)
     
 install:
-Just copy the TabGroupie.js to ~/.pentadactyl/plugins/ (on Windows: %USERPROFILE%\pentadactyl\plugin)
+Just copy the TabGroupie.js to ~/.pentadactyl/plugins/ (on Windows: %USERPROFILE%\pentadactyl\plugins)
 and it will work with these tree commands:
 
     changegroup [TARGETGROUPTITLE]
