Auto-Completion; README and helppage updated

--- a/README
+++ b/README
@@ -3,9 +3,7 @@ rename them and move the currently use tab from group to group
 with pentadactyl.
 
 under constuction:
-I'm not yet done. There are still a lot of things to do
-e.g. Tabkey-Completion.
-Plase be careful.
+It works, but if you have any ideas that may improve this plugin let me know.
 
 requires:
 Firefox 4.0 (or similar) or higher
@@ -14,12 +12,21 @@ install:
 Just copy the TabGroupie.js to ~/.pentadactyl/plugins/ (on Windows: %USERPROFILE%\pentadactyl\plugins)
 and it will work with these four commands:
 
-    changetabgroup [TARGETGROUPTITLE]
-    newtabgroup [NEWGROUPTITLE]
-    renametabgroup [NEWTITLE]
-    deltabgroup [GROUPTITLE]
+    tabgroupchange [TARGETGROUPTITLE]
+    tabgroupnew [NEWGROUPTITLE]
+    tabgrouptitle [NEWTITLE]
+    tabgroupdelete [GROUPTITLE]
     
-after restarting pentadactyl and have fun with your TabGroupie.
+after restarting pentadactyl.
 
 uninstall:
 Just remove TabGroupie.js from ~/.pentadactyl/plugins (on Windows: %USERPROFILE%\pentadactyl\plugins).
+
+Thanks:
+I like to thank Kris Maglione for helping me out with the completion
+and my Dad, Thammi, Astro and dodo and all other whos freetime I wasted
+for the codereviews and advices.
+I learned a lot about JavaScript, Firefox and Pentadactyl.
+
+Have fun with TabGroupie.
+
